RESOLVED FIXED 256119
REGRESSION(259684@main-259698@main?) [[ Ventura wk2 ] fast/images/avif-as-image.html is a constant ImageOnlyFailure
https://bugs.webkit.org/show_bug.cgi?id=256119
Summary REGRESSION(259684@main-259698@main?) [[ Ventura wk2 ] fast/images/avif-as-ima...
Robert Jenner
Reported 2023-04-28 17:55:00 PDT
Attachments
Robert Jenner
Comment 1 2023-04-28 18:02:15 PDT
I was able to reproduce the failure at Ventura Release ToT running the test as follows: run-webkit-tests --no-show-results --no-new-test-results --clobber-old-results fast/images/avif-as-image.html
Radar WebKit Bug Importer
Comment 2 2023-04-28 18:02:43 PDT
Myles C. Maxfield
Comment 3 2023-05-31 16:07:41 PDT
*** Bug 257572 has been marked as a duplicate of this bug. ***
Myles C. Maxfield
Comment 4 2023-05-31 16:10:26 PDT
Robert Jenner
Comment 5 2023-06-09 10:15:02 PDT
*** Bug 256121 has been marked as a duplicate of this bug. ***
EWS
Comment 6 2023-06-21 08:32:58 PDT
Committed 265359@main (540c18841b48): <https://commits.webkit.org/265359@main> Reviewed commits have been landed. Closing PR #14562 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.